# conway

./: README.md  flake.nix
fennel/: conway.fnl  globals.fnl  gui.fnl  main.fnl  main.lua
haskell/: conway-hs.cabal
haskell/app/: Main.hs
haskell/src/: Conway.hs
haskell/tests/: Test.hs
python/: conway.py  requirements.txt
racket/: .gitignore  conway.rkt
rust/: Cargo.toml
rust/src/: conway.rs  gui.rs  main.rs
typescript/: conway.ts  index.html  tsconfig.json
