cabal-version:      2.4
name:               conway-hs
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             tjcardinal
maintainer:         tylerjcardinal@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Conway

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.3.0,
        containers
    hs-source-dirs:   src
    default-language: Haskell2010

executable conway-hs
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.3.0,
        containers,
        conway-hs,
        gloss
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite test
    type: exitcode-stdio-1.0
    main-is: Test.hs
    build-depends:
        base ^>=4.14.3.0,
        containers,
        conway-hs,
        tasty,
        tasty-hunit
    hs-source-dirs: tests
    default-language: Haskell2010
